[package]
name = "rusteze"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"
default-run = "rusteze"

[dependencies]
serenity = { version = "0.10", features = ["collector"] }
serde = "1"
serde_json = "1"
regex = "1"
itertools = "0.9"
once_cell = "1"
rand = "0.8"
aho-corasick = "0.7"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
pin-utils = "0.1"
erased-serde = "0.3"
typetag = "0.1"
toml = "0.5"
serde_with = "1"
daemons = { git = "https://github.com/mendess/daemons", version = "0.7" }
anyhow = "1.0"

[profile.release]
codegen-units = 1
