[package]
name = "rusteze"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2018"
default-run = "rusteze"

[dependencies]
serenity = { version = "0.11.2", features = ["collector"] }
serde = "1"
serde_json = "1"
regex = "1"
itertools = "0.10"
once_cell = "1"
rand = "0.8"
aho-corasick = "1.0"
chrono = "0.4"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
pin-utils = "0.1.0"
erased-serde = "0.3"
typetag = "0.2"
toml = "0.7"
serde_with = "2"
daemons = { git = "https://github.com/mendess/daemons", version = "0.9" }
anyhow = "1"

[profile.release]
codegen-units = 1
