[package]
name = "rusteze"
version = "0.1.0"
authors = ["Mendess2526 <pedro.mendes.26@gmail.com>"]
edition = "2024"
default-run = "rusteze"

[dependencies]
serenity = { version = "0.12", features = ["collector"] }
serde = "1"
serde_json = "1"
regex = "1"
itertools = "0.10"
once_cell = "1"
aho-corasick = "1.0"
chrono = "0.4"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
futures = "0.3"
serde_with = "2"
anyhow = "1"

[profile.release]
codegen-units = 1
